Added --rffract <x> option to esl-alimanip, to remove any sequences less than <x> fraction the nongap RF length of the alignment. Requested by Marco Punta.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@910 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/miniapps/esl-alimanip.man
+++ b/miniapps/esl-alimanip.man
@@ -105,6 +105,12 @@ Remove any sequences with length more than
 residues.
 
 .TP 
+.BI --rfnfract " <x>"
+Remove any sequences with nongap RF length less than 
+.I <x>
+fraction the nongap RF length of the alignment.
+
+.TP 
 .BI --detrunc " <n>"
 Remove any sequences that have all gaps in the first 
 .I <n>
