Added esl_gencode module: genetic codes. Added draft of esl-translate: translation utility that will replace squid's translate and easel's esl-stranslate.
Changed esl_fileparser to work better as a line-oriented parser.  Now
esl_fileparser_NextLine() loads next data-containing line in its
<buf>, and does not start parsing it for tokens. tok, toklen, and
tokchar fields removed from ESL_FILEPARSER.

Fixed bug in Genbank ASCII parser. When it was strchop()'ing DESC
line, it was passing nc as length of string <s>, but string <s> is
already bumped to column +12, so it needs nc-12.

Minor change in esl_regexp: its example 1 ifdef needs to be
eslREGEXP_EXAMPLE, not eslREGEXP_EXAMPLE1, to conform to conventions
used for other drivers.



git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@951 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/esl_regexp.tex
+++ b/esl_regexp.tex
@@ -346,7 +346,7 @@ expressions:
 \end{tabular}
 \end{center}
 
-A backslash is followed by an alphanumeric character that is neither
+A backslash that is followed by an alphanumeric character that is neither
 an escape code or a character set code is an error.
 
 \ccode{[} is the set (or range) operator. \footnote{An unmatched
