esl-translate is now ready for use.
Improved how it handles degenerate DNA sequence. Now it correctly
checks whether degenerate codon can be uniquely mapped to an
initiation codon.

esl_gencode unit testing added.
esl-translate integrated test (esl-translate.itest.pl) added.

esl_translate module deleted.
esl-stranslate miniapp deleted.
I don't think any other code was calling esl_trans_* functions.



git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@957 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/miniapps/esl-translate.man
+++ b/miniapps/esl-translate.man
@@ -171,6 +171,39 @@ NCBI translation tables is at
 at a link titled
 .I Genetic codes.
 
+.SH IUPAC DEGENERACY CODES IN DNA 
+
+.pp
+DNA sequences may contain IUPAC degeneracy codes, such as N, R, Y,
+etc. If all codons consistent with a degenerate codon translate to the
+same amino acid (or to a stop), that translation is done; otherwise,
+the codon is translated as X (even if one or more compatible codons
+are stops). For example, in the standard code, UAR translates to *
+(stop), GGN translates to G (glycine), NNN translates to X, and UGR
+translates to X (it could be either a UGA stop or a UGG Trp).
+
+.pp
+Degenerate initiation codons are handled essentially the same. If all
+codons consistent with the degenerate codon are legal initiators, then
+the codon is allowed to initiate a new ORF. Stop codons are never
+a legal initiator (not only with 
+.I -m 
+or
+.I -M
+but also with the default of allowing any amino acid to initiate),
+so degenerate codons consistent with a stop cannot be initiators.
+For example, NNN cannot initiate an ORF, nor can UGR -- even
+though they translate to X. This means that we don't translate
+long stretches of N's as long ORFs of X's, which is probably a
+feature, given the prevalence of artificial runs of N's in genome 
+sequence assemblies.
+
+.pp
+Degenerate DNA codons are not translated to degenerate amino acids
+other than X, even when that is possible. For example, SAR and MUH
+are decoded as X, not Z (Q|E) and J (I|L). The extra complexity
+needed for a degenerate to degenerate translation doesn't seem worthwhile.
+
 
 .SH OPTIONS
 
